--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "jest": "jest"
+    "jest": "jest",
+    "build":"tsc"
+
   },
   "keywords": [],
   "author": "",
